@@ -12,6 +12,8 @@ Revision history for Perl extension IPC::Shareable.
     - Code refactoring in IPC::SharedMem
     - Add POD for IPC::SharedMem
     - SharedMem::remove() now returns 1 on '0 but true' and 0 otherwise
+    - Fix issue in SharedMem::shmread() where we have to remove an eol char
+      that was preventing matches from happening, and broke JSON
 
 1.13    2022-10-11
     - In singleton(), do a check whether class was sent in. There was a shifting
